fix: corrections Sonar Wave phase 2 - refactors types generiques et litteraux
Agent-Logs-Url: https://github.com/ptcherniati/openadom/sessions/cb06409c-d297-4cd5-8457-398ff41d6612

Co-authored-by: ptcherniati <18171242+ptcherniati@users.noreply.github.com>